--- a/platform_code/home/templates/home/about.html
+++ b/platform_code/home/templates/home/about.html
@@ -9,7 +9,7 @@
 
 <h1 class="h1-margin-no-breadcrumbs">A propos de Substra Foundation</h1>
 
-<div class="container container-about-page">
+<div class="static-wrapper">
     <p>Substra Foundation est une organisation à but non lucratif indépendante, dédiée à l’exploration d’approches de la
         data science sûres, responsables et protectrices des données sensibles, et au <strong>développement
             d’écosystèmes de data science de confiance</strong>. Elle travaille en particulier sur les collaborations
