--- a/platform_code/home/templates/home/faq.html
+++ b/platform_code/home/templates/home/faq.html
@@ -13,7 +13,7 @@
     />
 </head>
 
-<div class="container">
+<div class="static-wrapper">
     <h1 class="h1-margin-no-breadcrumbs">{% trans "FAQ" %}</h1>
     <img alt="{% trans 'Find the answers to your questions about the Substra assessment.' %}"
          class="img-fluid d-block mx-auto image-faq"
