--- a/platform_code/home/templates/home/release-notes.html
+++ b/platform_code/home/templates/home/release-notes.html
@@ -7,7 +7,7 @@
 {% block content %}
 <title>Substra Assessment: release notes</title>
 
-<div class="container">
+<div class="static-wrapper">
     <h1 class="h1-margin-no-breadcrumbs">{% trans "Release Notes" %}</h1>
     {% for release in release_notes %}
     <div class="release-note">
