--- a/platform_code/home/templates/home/settings-password.html
+++ b/platform_code/home/templates/home/settings-password.html
@@ -2,38 +2,37 @@
 {% load assessment_tags %}
 {% load i18n %}
 
-<div>
-    <h3 class="settings-subtitle flex">{% trans "Change password" %}
-        <div class="help-tip help-tip-right remove-smartphone-screen margin-left-1em">
-            <p>{% trans "Your password must contain at least 8 characters, with at least one number and one letter" %}</p>
-        </div>
-    </h3>
 
-    {% if messages %}
-    <ul class="messages" id="div_messages">
-        {% for message in messages %}
-        <li class="alert-danger ">{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-
-    <div class="body change-password-form margin-50 center-smartphone-screen">
-        <div class="column-larger-tablet">
-            <form id="ChangePassword" method="post" action="#">
-                {% csrf_token %}
-                {% for field in change_password_form %}
-                <span class="float-left-larger-tablet">{{ field.label_tag }}</span>
-                <p class="max-width">{{field}}</p>
-                {% endfor %}
-                <div class="center-smartphone">
-                    <button class="btn btn-primary" onclick="submitUserSettingsPasswordForm('ChangePassword')"
-                            type="button">{% trans "Modify" %}
-                    </button>
-                </div>
-            </form>
-        </div>
+<h3 class="settings-subtitle flex flex-center-small-screen">{% trans "Change password" %}
+    <div class="help-tip help-tip-right remove-smartphone-screen margin-left-1em">
+        <p>{% trans "Your password must contain at least 8 characters, with at least one number and one letter" %}</p>
     </div>
+</h3>
 
-    <div id="messagePassword" class="alert display-none"></div>
+{% if messages %}
+<ul class="messages" id="div_messages">
+    {% for message in messages %}
+    <li class="alert-danger ">{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
 
+<div class="body change-password-form form-center-small-screen margin-50 center-smartphone-screen">
+    <div class="column-larger-tablet">
+        <form id="ChangePassword" method="post" action="#">
+            {% csrf_token %}
+            {% for field in change_password_form %}
+            <span class="float-left-larger-tablet">{{ field.label_tag }}</span>
+            <p class="max-width">{{field}}</p>
+            {% endfor %}
+            <div class="center-smartphone">
+                <button class="btn btn-primary" onclick="submitUserSettingsPasswordForm('ChangePassword')"
+                        type="button">{% trans "Modify" %}
+                </button>
+            </div>
+        </form>
+    </div>
 </div>
+
+<div id="messagePassword" class="alert display-none"></div>
+
