--- a/platform_code/assessment/static/css/element-card.css
+++ b/platform_code/assessment/static/css/element-card.css
@@ -237,7 +237,7 @@ div.evaluation-title: h3 {
   top: 25%;
   left: 0;
   overflow-x: hidden;
-  padding-top: 20px;
+  /*padding-top: 20px;*/
 }
 
 .title-sidenav {
