--- a/platform_code/assessment/static/css/summary.css
+++ b/platform_code/assessment/static/css/summary.css
@@ -87,7 +87,8 @@ h1{
     margin: auto;
     border-top: 0;
     border: 0px;
-
+    font-size: 16px;
+    padding: 5px;
 }
 
 .col-array {
@@ -112,10 +113,11 @@ h1{
 
 .row-array:hover .div-hidden-icons {
     visibility: visible;
+    background-color: white;
 }
 
-.div-hidden-icons{
+.div-hidden-icons {
     visibility: hidden;
-    border-top:0px;
+    border-top: 0px;
 }
 
