--- a/platform_code/assessment/templates/assessment/content-section.html
+++ b/platform_code/assessment/templates/assessment/content-section.html
@@ -43,7 +43,7 @@
             {% csrf_token %}
             {{section_notes_form}}
             <div class="wrapper">
-                {% if evaluation.organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "editor" %}
+                {% if evaluation|user_can_edit_evaluation:user %}
                     <button class="btn btn-primary same-size-220 margin-10"
                             onclick="submitSectionNotes('sectionNotes{{section.id}}', '{{section.id}}')"
                             title="{% trans 'Save the notes' %}"
@@ -51,7 +51,8 @@
                     </button>
                 {% else %}
                     <button class="btn btn-primary same-size-220" disabled
-                            title="{% trans 'You do not have the right to do this action' %}"
+                            title="{% if not evaluation.is_editable %} {% trans 'You cannot edit this evaluation' %} {% else %}
+                            {% trans 'You do not have the right to do this action' %} {% endif %}"
                             type="button">{% trans "Save" %}
                     </button>
                 {% endif %}
@@ -118,7 +119,7 @@
                                         </p>
                                     {% endif %}
 
-                                    {% if evaluation.organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "editor" %}
+                                    {% if evaluation|user_can_edit_evaluation:user %}
                                         {% if element.has_condition_on and element|is_not_applicable %}
                                         <fieldset disabled id="disable_element_{{element.id}}">
                                             {{ dic_form|get_item:element }}
@@ -134,7 +135,7 @@
                                         </fieldset>
                                     {% endif %}
 
-                                    {% if evaluation.organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "editor" %}
+                                    {% if evaluation|user_can_edit_evaluation:user %}
                                     <div class="flex-column mr-3">
                                         <a class="reset-response row justify-content-end"
                                            onclick="removeNoteEvaluation({{element.id}}, 'confirmationform')">
@@ -173,7 +174,7 @@
                                         <i class="fa fa-arrow-up"></i>
                                     </div>
                                 {% endif %}
-                                {% if evaluation.organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "editor" %}
+                                {% if evaluation|user_can_edit_evaluation:user %}
                                     {% if element.has_condition_on and element|is_not_applicable %}
                                         <button class="btn btn-primary validation-button adapted-button-size-250"
                                                 disabled
@@ -195,7 +196,11 @@
                                 {% else %}
                                     <button class="btn btn-primary validation-button adapted-button-size-250"
                                             disabled
-                                            title="{% trans 'You do not have the right to do this action' %}"
+                                            title="{% if not evaluation.is_editable %}
+                                                {% trans 'You cannot edit this evaluation' %}
+                                                {% else %}
+                                                {% trans 'You do not have the right to do this action' %}
+                                                {% endif %}"
                                             type="button">
                                         {% trans "Validate" %}
                                     </button>
@@ -213,7 +218,7 @@
                                     </div>
                                   {% endif %}
                             </div>
-                            {% if evaluation.organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "editor" %}
+                            {% if evaluation|user_can_edit_evaluation:user %}
                             <div class="full-width center mt-2">
                                 {% if element.has_condition_on and element|is_not_applicable %}
                                 <a class="reset-response remove-smaller-than-small-screen"
