--- a/platform_code/assessment/templates/assessment/section.html
+++ b/platform_code/assessment/templates/assessment/section.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="breadcrumbs larger-small-screen-margin-left-150">
+<div class="breadcrumbs larger-small-screen-margin-left-18vw">
     <a href="{% url 'home:user-profile' %}">{% trans 'Dashboard' %}</a>
     <span> ></span>
     <a href="{% url 'assessment:orga-summary' evaluation.organisation.id %}">{% trans 'Organisation' %}</a>
@@ -16,7 +16,7 @@
 </div>
 
 {% if evaluation.is_upgradable %}
-<div class="upgrade-banner-section-evaluation larger-small-screen-margin-left-150">
+<div class="upgrade-banner-section-evaluation larger-small-screen-margin-left-18vw">
     {% include "assessment/upgrade-banner.html" %}
 </div>
 {% endif %}
@@ -31,7 +31,7 @@
     </div>
 {% endif %}
 
-<div class="main">
+<div class="main content-section">
     <div id="content-section">
         {% include "assessment/content-section.html" %}
     </div>
