--- a/platform_code/home/templates/home/dashboard/dashboard-admin.html
+++ b/platform_code/home/templates/home/dashboard/dashboard-admin.html
@@ -5,69 +5,53 @@
 
 {% block content %}
 
-<h1 class="center margin-30 margin-bot-30">{%trans "Dashboard"%}</h1>
-<div id="admin-dashboard-error" class="center margin-20">
-</div>
-    <nav>
-        <div class="nav nav-tabs justify-content-center nav-fill" id="nav-tab" role="tablist">
-            <a aria-controls="nav-user"
+<div>
+    <ul class="nav nav-pills mb-3 menu-buttons"
+        id="pills-tab"
+        role="tablist"
+    >
+        <li class="nav-item" role="presentation">
+            <a class="nav-link {% if tab == 'stats' %} active {% endif %}"
+               id="pills-stats-tab"
+               data-toggle="pill"
+               href="#pills-stats"
+               role="tab"
+               aria-controls="pills-stats"
                aria-selected="true"
-               class="nav-item nav-link title-nav-resources active"
-               data-toggle="tab"
-               href="#nav-user"
-               id="nav-user-tab"
-               onclick="changeDashboardTab('users-dashboard-tab')"
-               role="tab">
-                {% trans "User stats" %}
+               name="menu-button"
+            >
+                {% trans "Stats" %}
             </a>
-            <a aria-controls="nav-organisation"
-               aria-selected="false"
-               class="nav-item nav-link title-nav-resources"
-               data-toggle="tab"
-               href="#nav-organisation"
-               id="nav-organisation-tab"
+        </li>
+        <li class="nav-item" role="presentation">
+            <a class="nav-link {% if tab == 'labelling' %} active {% endif %}"
+               id="pills-profile-tab"
+               data-toggle="pill"
+               href="#pills-profile"
                role="tab"
-               onclick="changeDashboardTab('organisations-dashboard-tab')"
-                >
-                {% trans "Organisations stats " %}
-            </a>
-            <a aria-controls="nav-evaluation"
+               aria-controls="pills-profile"
                aria-selected="false"
-               class="nav-item nav-link title-nav-resources"
-               data-toggle="tab"
-               href="#nav-evaluation"
-               id="nav-evaluation-tab"
-               role="tab"
-               onclick="changeDashboardTab('evaluations-dashboard-tab')"
-                >{% trans "Evaluations stats" %}
+               name="menu-button"
+            >
+                {% trans "Labelling" %}
             </a>
+        </li>
+    </ul>
+    <div class="tab-content" id="pills-tabContent">
+        <div class="tab-pane {% if tab == 'stats' %} active show {% else %} fade {% endif %}"
+             id="pills-stats"
+             role="tabpanel"
+             aria-labelledby="pills-stats-tab"
+        >
+            {% include 'home/dashboard/dashboard-stats.html' %}
         </div>
-    </nav>
-
-<div id="users-dashboard-tab"
-     name="dashboard-tab">
-    {% include "home/dashboard/dashboard-admin-users-tab.html" %}
+        <div class="tab-pane fade {% if tab == 'labelling' %} active show {% else %} fade {% endif %}"
+             id="pills-profile"
+             role="tabpanel"
+             aria-labelledby="pills-profile-tab"
+        >
+            {% include 'home/dashboard/dashboard-labelling.html' %}
+        </div>
+    </div>
 </div>
-<div id="evaluations-dashboard-tab"
-     name="dashboard-tab"
-     class="display-none">
-    {% include "home/dashboard/dashboard-admin-evaluations-tab.html" %}
-</div>
-<div id="organisations-dashboard-tab"
-     name="dashboard-tab"
-     class="display-none">
-    {% include "home/dashboard/dashboard-admin-organisations-tab.html" %}
-</div>
-
-
-<script>
-
-function changeDashboardTab(tabId) {
-    var allTabs = Array.from(document.getElementsByName('dashboard-tab'));
-    allTabs.forEach((tab) => {
-        tab.id != tabId ? tab.classList.add("display-none") : tab.classList.remove("display-none")
-    })
-}
-</script>
-
 {% endblock %}
