--- a/platform_code/home/templates/home/profile-orga-cards.html
+++ b/platform_code/home/templates/home/profile-orga-cards.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 
-<div class="larger-large-screen-50-top margin-bot-30">
+<div class="larger-large-screen-50-top margin-bot-30 center-max-1130">
     <a class="btn btn-primary card-button" data-target="#modal-create-orga" data-toggle="modal"
        href="{% url 'home:orga-creation' %}">{% trans "Create a new organisation" %}
     </a>
