--- a/platform_code/home/templates/home/resources.html
+++ b/platform_code/home/templates/home/resources.html
@@ -7,7 +7,7 @@
 
 <h1 class="h1-margin-no-breadcrumbs"> Ressources </h1>
 
-<div>
+<div class="resource-wrapper">
     {% include "home/profile-my-ressources.html" %}
 </div>
 
