--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -22,7 +22,7 @@
     />
     <link href="{% static 'image/favicon.ico' %}" rel="shortcut icon" type="image/png">
 
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/bf86389514.js" crossorigin="anonymous"></script>
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'vendor/bootstrap/css/bootstrap-grid.min.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'vendor/bootstrap/css/bootstrap-reboot.min.css' %}" rel="stylesheet" type="text/css">
